--- a/index.html
+++ b/index.html
@@ -64,10 +64,7 @@
             </div>
             <div class="editlar_1">
                 <h3>Misol uchun edit:👇👇</h3>
-                <video width="640" height="360" controls id="videoks">
-                    <source src="./images/VID_20251030_130215_779.mp4" type="video/mp4">
-                    Sizning brauzeringiz videoni o'qiy olmaydi
-                </video>
+                <a href="./editlar.html">Editlar</a>
             </div>
         </section>
         <section>
